--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -405,8 +405,8 @@
   "gui.beemancer.terminal.deposit": "Deposit",
   "gui.beemancer.terminal.craft": "Craft",
   "gui.beemancer.terminal.pickup": "Pickup",
-  "gui.beemancer.tasks.active": "Active Tasks",
-  "gui.beemancer.tasks.queued": "Queued Tasks",
+  "gui.beemancer.tasks.requests": "Requests",
+  "gui.beemancer.tasks.automation": "Automation",
   "gui.beemancer.tasks.empty": "No tasks",
   "gui.beemancer.terminal.essences": "Essences",
   "block.beemancer.import_interface": "Import Interface",
