--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -404,8 +404,8 @@
   "gui.beemancer.terminal.deposit": "Dépôt",
   "gui.beemancer.terminal.craft": "Craft",
   "gui.beemancer.terminal.pickup": "Retrait",
-  "gui.beemancer.tasks.active": "Tâches actives",
-  "gui.beemancer.tasks.queued": "Tâches en attente",
+  "gui.beemancer.tasks.requests": "Requêtes",
+  "gui.beemancer.tasks.automation": "Automatisation",
   "gui.beemancer.tasks.empty": "Aucune tâche",
   "gui.beemancer.terminal.essences": "Essences",
   "block.beemancer.import_interface": "Interface d'Import",
